--- a/scss/effects/shadow-and-glow-transitions/_float-shadow.scss
+++ b/scss/effects/shadow-and-glow-transitions/_float-shadow.scss
@@ -23,7 +23,8 @@
 
 	&:hover,
 	&:focus,
-	&:active {
+	&:active,
+	&.activated {
 		@include prefixed(transform, translateY(-5px)); /* move the element up by 5px */
 
 		&:before {
