--- a/scss/effects/2d-transitions/_pulse.scss
+++ b/scss/effects/2d-transitions/_pulse.scss
@@ -12,9 +12,7 @@
 @mixin pulse {
 	@include hacks();
 
-	&:hover,
-	&:focus,
-	&:active {
+	&.activated {
 		@include prefixed(animation-name, #{$nameSpace}-pulse);
 		@include prefixed(animation-duration, 1s);
 		@include prefixed(animation-timing-function, linear);
